2002-03-30  John R. Jackson (jrj@purdue.edu)

	* server-src/planner.c: Make sure individual dumps larger than a tape
	  are not added back into the schedule.  Found by Uncle George
	  <gatgul@voicenet.com>.

2002-03-29  John R. Jackson (jrj@purdue.edu)

	* man/amanda.8.in: Move "comment" in tapetype after inclusion of
	  previous definition.  Found by Uncle George <gatgul@voicenet.com>.

2002-03-25  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/client_util.c (fixup_relative): New function to prepend
	  the dirname if relative.
	* client-src/client_util.c (build_exclude, build_include): Use
	  fixup_relative.
	* client-src/client_util.c (parse_options): Do not prepend the dirname.
	* client-src/selfcheck.c (check_options): Don't generate ERROR for samba
	  if optional is set.

2002-03-24  John R. Jackson (jrj@purdue.edu)

	* common-src/debug.c: Change dbopen() message slightly to match what
	  amdump generates, making it easier to parse.

2002-03-24  John R. Jackson (jrj@purdue.edu)

	* common-src/Makefile.am: Move clock routines to common-src so
	  everyone may use them.
	* server-src/Makefile.am: Ditto.

2002-03-24  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/sendbackup-gnutar.c: Fix use of no_record.

2002-03-24  John R. Jackson (jrj@purdue.edu)

	* client-src/amandad.c: Make sure argv[0] is valid before using it.
	* restore-src/amidxtaped.c: Ditto.
	* server-src/amindexd.c: Ditto.

2002-03-24  John R. Jackson (jrj@purdue.edu)

	* client-src/client_util.c: Use the Amanda memory allocation code.
	* client-src/sendbackup-gnutar.c: Ditto.
	* client-src/sendsize.c: Ditto.
	* common-src/match.c: Ditto.
	* recover-src/amrecover.c: Ditto.
	* recover-src/display_commands.c: Ditto.
	* recover-src/extract_list.c: Ditto.
	* restore-src/amidxtaped.c: Ditto.
	* server-src/amflush.c: Ditto.
	* server-src/disk_history.c: Ditto.
	* server-src/driver.c: Ditto.
	* server-src/dumper.c: Ditto.